# Discord-Quest-Notification

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs  shutdown.rs
src/communication/: collectibles.rs  discord.rs  mod.rs  payload.rs  reward.rs  scraper.rs  task.rs  webhook.rs
src/config/: mod.rs
src/handlers/: lookup.rs  mod.rs  processor.rs  watcher.rs
src/types/: constants.rs  error.rs  mod.rs  quest.rs
src/utils/: mod.rs  tracing.rs
